feat(plugin): implemented random dialogues