@@ -11,6 +11,7 @@ import me.iatog.characterdialogue.dialogs.DialogMethod;
 import me.iatog.characterdialogue.dialogs.method.conditional.ConditionalMethod;
 import me.iatog.characterdialogue.enums.ClickType;
 import me.iatog.characterdialogue.placeholders.Placeholders;
+import me.iatog.characterdialogue.util.AdventureUtil;
 import me.iatog.characterdialogue.util.TextUtils;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
@@ -18,13 +19,16 @@ import org.bukkit.event.Listener;
 import org.bukkit.metadata.FixedMetadataValue;
 
 import java.util.List;
+import java.util.Random;
 
 public class AdaptedNPCListener implements Listener {
 
     private final CharacterDialoguePlugin main;
+    private final Random random;
 
     public AdaptedNPCListener(CharacterDialoguePlugin main) {
         this.main = main;
+        this.random = new Random();
     }
 
     @EventHandler
@@ -32,7 +36,23 @@ public class AdaptedNPCListener implements Listener {
         CharacterDialogueAPI api = main.getApi();
         Player player = event.getPlayer();
         AdaptedNPC npc = event.getNPC();
-        Dialogue dialogue = api.getNPCDialogue(npc.getId());
+        YamlDocument config = main.getFileFactory().getConfig();
+        String route = "npc." + npc.getId();
+
+        if(!config.contains(route)) {
+            return;
+        }
+
+        String dialogues = config.getString(route);
+        Dialogue dialogue = null;
+
+        if(dialogues.contains(",")) {
+            String[] split = dialogues.split(",");
+            int index = random.nextInt(split.length);
+            dialogue = main.getCache().getDialogues().get(split[index]);
+        } else {
+            dialogue = main.getCache().getDialogues().get(dialogues);
+        }
 
         if (dialogue == null || main.getCache().getDialogSessions().containsKey(player.getUniqueId())) {
             return;
@@ -41,14 +61,14 @@ public class AdaptedNPCListener implements Listener {
         long currentTime = System.currentTimeMillis();
 
         if (player.hasMetadata("dialogueCooldown")) {
-            long cooldown = player.getMetadata("dialogueCooldown").get(0).asLong();
+            long cooldown = player.getMetadata("dialogueCooldown").getFirst().asLong();
             if (currentTime < cooldown) {
-                player.sendMessage(TextUtils.colorize("&cCalm down."));
+                AdventureUtil.sendMessage(player, main.language("cooldown-message"));
                 return;
             }
         }
 
-        long cooldownTime = 2000;
+        long cooldownTime = (config.getInt("cooldown-time", 2) * 1000);
         player.setMetadata("dialogueCooldown", new FixedMetadataValue(main, currentTime + cooldownTime));
 
         ClickType clickType = dialogue.getClickType();
@@ -65,7 +85,7 @@ public class AdaptedNPCListener implements Listener {
 
             if (!player.hasPermission(permission)) {
                 if (message != null) {
-                    player.sendMessage(
+                    AdventureUtil.sendMessage(player,
                           Placeholders.translate(player, message.replace("%npc_name%", dialogue.getDisplayName()))
                     );
                 }
